tests/csmith/bad/smith000799.c
/*
 * This is a RANDOMLY GENERATED PROGRAM.
 *
 * Generator: csmith 2.0.0
 * svn version: exported
 * Options:   --check-global -s 799
 * Seed:      799
 */

#include "random_runtime.h"


long __undefined;

/* --- Struct/Union Declarations --- */
/* --- GLOBAL VARIABLES --- */
 volatile uint8_t g_4 = 0x32L;/* VOLATILE GLOBAL g_4 */
uint64_t g_5 = 1L;
int32_t g_15 = 0xCDF5EF88L;


/* --- FORWARD DECLARATIONS --- */
int32_t  func_1(void);


/* --- FUNCTIONS --- */
/* ------------------------------------------ */
/* 
 * reads : g_4 g_5
 * writes: g_15
 */
int32_t  func_1(void)
{ /* block id: 0 */
     const uint64_t l_10 = -2L;
    uint32_t l_13 = -2L;
    int32_t *l_14 = &g_15;
    (*l_14) = (safe_div_func_uint64_t_u_u((g_4 < g_5), ((safe_mul_func_uint16_t_u_u((safe_div_func_int16_t_s_s((g_5 ^ (g_5 || l_10)), (safe_mul_func_uint8_t_u_u(l_10, (l_13 == l_13))))), 1L)) >= g_5)));
    return g_5;
}




/* ---------------------------------------- */
int main (int argc, char* argv[])
{
    func_1();
    printf("checksum g_4 = %d\n", g_4);
    printf("checksum g_5 = %d\n", g_5);
    printf("checksum g_15 = %d\n", g_15);
}

/************************ statistics *************************
XXX max struct depth: 0
breakdown:
   depth: 0, occurrence: 6

XXX max expression depth: 0
breakdown:
   depth: 0, occurrence: 2

XXX total number of pointers: 1

XXX times a variable address is taken: 1
XXX times a pointer is dereferenced on RHS: 0
breakdown:
XXX times a pointer is dereferenced on LHS: 1
breakdown:
   depth: 1, occurrence: 1
XXX times a pointer is compared with null: 0
XXX times a pointer is compared with address of another variable: 0
XXX times a pointer is compared with another pointer: 0
XXX times a pointer is qualified to be dereferenced: 0

XXX max dereference level: 1
breakdown:
   level: 0, occurrence: 0
   level: 1, occurrence: 2
XXX number of pointers point to pointers: 0
XXX number of pointers point to scalars: 1
XXX number of pointers point to structs: 0
XXX percent of pointers has null in alias set: 0
XXX average alias set size: 1

XXX times a non-volatile is read: 9
XXX times a non-volatile is write: 2
XXX times a volatile is read: 1
XXX    times read thru a pointer: 0
XXX times a volatile is write: 0
XXX    times written thru a pointer: 0
XXX times a volatile is available for access: 1
XXX percentage of non-volatile access: 91.7

XXX forward jumps: 0
XXX backward jumps: 0

XXX stmts: 3

XXX percentage a fresh-made variable is used: 40
XXX percentage an existing variable is used: 60
********************* end of statistics **********************/

